--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       padding: 20px;
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
       border: 1px solid rgba(255, 255, 255, 0.2);
+      width: 600px;
+      height: 300px
     }
 
     #display {
